tests/toy/neg/001161_mutation.toylang
program a = { int a do sleep; } .
